# bpoe-api-gateway

./: .env.test  .gitattributes  .gitignore  .pre-commit-config.yaml  FAstAPI with Aoth0.postman_collection.json  README.md  index.html  mkdocs.yml  pyproject.toml
doc/: configuration.md  index.md
doc/api/: auth_exceptions.md  auth_router.md  auth_utils.md  config.md  main.md  observability.md
docker/: .env.template  Dockerfile  docker-compose.yml
src/: config.py  exceptions.py  main.py  observability.py
src/auth/: config.py  exceptions.py  models.py  router.py  service.py  utils.py
tests/: conftest.py  test_main.py
tests/auth/: __init__.py  test_config.py  test_router.py  test_utils.py
