[tool.poetry]
name = "bpoe-api-gateway"
version = "0.1.0"
description = ""
authors = ["Cybernetic-Ransomware <71835339+Cybernetic-Ransomware@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.5"}
python-decouple = "^3.8"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"
pytest = "^8.3.3"


[tool.ruff]
extend-exclude = []
line-length = 124

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 124

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM"]
#select = ["I"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F401", "F841"]
"test_*.py" = ["F401", "F841"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
