[tool.poetry]
name = "bpoe-api-gateway"
version = "0.1.0"
description = ""
authors = ["Cybernetic-Ransomware <71835339+Cybernetic-Ransomware@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.5"}
python-decouple = "^3.8"
fastapi-auth0 = "^0.5.0"
jwt = "^1.3.1"
pyjwt = "^2.10.1"
itsdangerous = "^2.2.0"
sentry-sdk = {extras = ["fastapi"], version = "^2.23.1"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"
pytest = "^8.3.3"
httpx = "^0.27.2"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
pre-commit = "^4.2.0"
codespell = "^2.4.1"
mypy = "^1.16.0"
commitizen = "^4.10.1"
mkdocs = "^1.6.1"
mkdocs-material = "^9.7.0"
mkdocstrings = {extras = ["python"], version = "^1.0.0"}
mkdocs-awesome-pages-plugin = "^2.10.1"
mkdocs-glightbox = "^0.5.2"
pymdown-extensions = "^10.19.1"


[tool.pytest]
pythonpath = "./src"

[tool.pytest.ini_options]
addopts = "--junitxml=./temp/tests/pytest_result.xml --cov=src --cov-report html:temp/tests/coverage"
filterwarnings = [
    "ignore::UserWarning",
    'ignore:function ham\(\) is deprecated:DeprecationWarning',
    "ignore:module 'sre_constants' is deprecated:DeprecationWarning",
    "ignore::SyntaxWarning",
]
asyncio_default_fixture_loop_scope = "function"


[tool.ruff]
extend-exclude = []
line-length = 124
exclude = ["tests/*"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 124

[tool.ruff.lint]
#select = ["E", "F", "UP", "B", "SIM"]
select = ["E4", "E7", "E9", "F", "B", "Q"]
#select = ["I"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F401", "F841"]
"test_*.py" = ["F401", "F841"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends", "fastapi.Query", "fastapi.params.Query"]

[tool.mypy]
files = ["src"]
exclude = [
    "tests/",
]
ignore_missing_imports = true

[tool.codespell]
skip = """
./.git,
./.github,
./tests/.*,
./temp/.*,
./log/.*,
"""
builtin = "clear"
quiet-level = 3

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
